--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
       </header>
       
       <!-- DEUXIEME ETAPE -->
-      <nav>
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container">
-          <div>Portail</div>
+          <div class="navbar-brand">Portail</div>
           <!-- NE PAS TOUCHER (boutton en responsive : oui je suis gentil) -->
-          <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarText">
+          <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarText">
             <span class="navbar-toggler-icon"></span>
           </button>
           
           <!-- LES LIENS (Je vous laisse l'ID navbarText, mais pensez aux classes) -->
-          <div id="navbarText">
-            <ul>
-              <li>
-                <a>Accueil</a>
+          <div id="navbarText" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active">Accueil</a>
               </li>
-              <li>
-                <a>Boutique du château</a>
+              <li class="nav-item">
+                <a class="nav-link">Boutique du château</a>
               </li>
-              <li>
-                <a>Boutique d'Ollivander</a>
+              <li class="nav-item">
+                <a class="nav-link">Boutique d'Ollivander</a>
               </li>
-              <li>
-                <a>Dossier d'inscription</a>
+              <li class="nav-item">
+                <a class="nav-link">Dossier d'inscription</a>
               </li>
             </ul>
           </div>
